tests/paczka1/small_fuzzy/42868435.err
Error in line 1: SQN9hm5T S716 57,6
Error in line 5: SQN9hm5T S718 180,7
